# dab-config-tests

./: README.md  databricks.yml  pyproject.toml
environment_config/: dev.conf  dev1.conf  dev2.conf  qa.conf  shared.conf
resources/: config_tests_job.yml
src/config_tests/: main.py
tests/: main_test.py
